Public/styles/main.css
h1 {
    font-size: 28px;
    font-weight: bold;
}

h2 {
    font-size: 22px;
    font-weight: bold;
}

.text-ml-red {
    color: #e50045;
}

.navigation {
    background: rgb(255,133,49);
    background: linear-gradient(to bottom, #e50045, #9d002f);
}

.navigation a {
    color: #e50045;
    border: none;
    margin-right: 2px;
}

.navigation a:last-child {
    margin: 0;
}

.navigation a:hover, .navigation a.active {
    background-color: #e50045;
    color: #ffffff;
}

.navigation .btn-group {
    border-radius: 10px;
    overflow: hidden;
    border: 1px solid #ffffff;
    background-color: #ffffff;
}

.container {
    max-width: 920px;
}

.article {
    border-radius: 12px;
    padding: 15px 20px;
}

.article a {
    text-decoration: none;
    color: var(--bs-body-color);
}

.article a:hover h1 {
    color: #e50045;
}

.article .highlight {
    display: inline-block;
    padding: 0 4px 2px 4px;
    border: 1px solid #546AFF;
    border-radius: 5px;
    background-color: #1A1721;
    margin-left: -5px;
}

.article code {
    font-size: var(--bs-body-font-size);
}

.article a.share {
    background-color: #e50e45;
    padding: 5px 8px;
    border-radius: 8px;
}

.article a.share:hover {
    filter: brightness(120%);
}

.c-card {
    border-radius: 12px;
    padding: 15px 20px;
}

.ml-button {
    background-color: #e50e45;
    border-radius: 8px;
    color: #ffffff;
    text-decoration: none;
}

.ml-button:hover {
    background-color: #e50e45;
    filter: brightness(120%);
}

a.ml-link {
    color: #e50e45;
    text-decoration: none;
}

a.ml-link:hover {
    color: #e50e45;
    filter: brightness(120%);
}

.sponsor {
    border: 3px solid #e50e45;
    border-radius: 20px;
    color: #ffffff;
    text-decoration: none;
}

.sponsor img {
    max-width: 200px;
    max-height: 50px;
}

